tests/snapshots/snapshots__pipeline@mask_escapes_only_handler.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/mask_escapes_only_handler.pr
---
== tokens ==
VOpen Effect UIdent("E") VOpen Ident("op") LParen KwInt RParen Colon KwInt VClose VSemi Fn Ident("f") LParen RParen Eq VOpen Handle Mask Lt UIdent("E") Gt LParen Ident("op") LParen Int(IntLit { value: 1, suffix: None }) RParen RParen With VOpen Ident("op") LParen Ident("x") RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Ident("x") RParen VSemi Return Ident("r") FatArrow Ident("r") VClose VClose VSemi Fn Ident("main") LParen RParen Colon KwUnit Bang LBrace UIdent("IO") RBrace Eq Ident("println") LParen Ident("f") LParen RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "E",
            params: [],
            ops: [
                EffOp {
                    name: "op",
                    params: [
                        Int,
                    ],
                    ret: Int,
                    grade: Many,
                    span: 273..275,
                },
            ],
            span: 262..286,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "f",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Handle(
                    Spanned {
                        node: Mask(
                            "E",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "op",
                                        ),
                                        span: 314..316,
                                    },
                                    [
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 1,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 317..318,
                                        },
                                    ],
                                ),
                                span: 314..319,
                            },
                        ),
                        span: 306..320,
                    },
                    [
                        Op(
                            "op",
                            [
                                "x",
                            ],
                            "k",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "k",
                                        ),
                                        span: 348..349,
                                    },
                                    [
                                        Spanned {
                                            node: Var(
                                                "x",
                                            ),
                                            span: 350..351,
                                        },
                                    ],
                                ),
                                span: 348..352,
                            },
                        ),
                        Return(
                            "r",
                            Spanned {
                                node: Var(
                                    "r",
                                ),
                                span: 369..370,
                            },
                        ),
                    ],
                    Exhaustive,
                ),
                span: 299..370,
            },
            wheres: [],
            span: 288..370,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "IO",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 398..405,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "f",
                                    ),
                                    span: 406..407,
                                },
                                [],
                            ),
                            span: 406..409,
                        },
                    ],
                ),
                span: 398..410,
            },
            wheres: [],
            span: 372..410,
        },
    ],
}

== types ==
[E5004] Type Error: in `main`: effect `E` not declared in annotation
    ╭─[ <source>:13:27 ]
    │
 13 │ fn main() : Unit ! {IO} = println(f())
    │                           ──────┬─────  
    │                                 ╰─────── in `main`: effect `E` not declared in annotation
────╯
